<resources>
    <string name="app_name">Gioco Destrezza</string>
    <string name="title_activity_main">Gioco Destrezza</string>
    <string name="text_view_selction">Seleziona una modalita</string>
    <string name="text_btn_gioco">Inizia</string>
    <string name="text_btn_training">Modalita Training</string>
    <string name="text_btn_classifield">Classifica</string>
    <string name="action_settings">Settings</string>
    <string name="request_name">Inserisci il tuo nome</string>
    <string name="title_activity_accellerometer_game">Accelerometer Game</string>
    <string name="shake_req">Effettua uno shake</string>
    <string name="hello_world">Hello world!</string>
    <string name="back_dialog_title">Uscita</string>
    <string name="back_dialog_mess">Vuoi davvero uscire? Il tuo punteggio verra perso</string>
    <string name="posite_button_text">Si</string>
    <string name="negative_button_text">No</string>
    <string name="time_out_dialog_title">Tempo Scaduto</string>
    <string name="time_out_dialog_mess">Vuoi Riprovare?</string>
    <string name="exit_dialog_title">Uscita</string>
    <string name="exit_dialog_mess">Vuoi davvero uscire?</string>
    <string name="win_dialog_title">Complimenti</string>
    <string name="win_dialog_mes">Punti Ottenuti: </string>
    <string name="win_dialog_btn_txt">Continua</string>
    <string name="title_activity_compass_game">Compass Game</string>
    <string name="elapsed_time">Tempo Residuo: </string>
    <string name="seconds">seconds</string>
    <string name="title_activity_proximity_game">Proximity Game</string>
    <string name="touch_sens_req">Tocca il sensore di prossimita</string>
    <string name="title_activity_recap">Recap</string>
    <string name="username">Nome</string>
    <string name="acc_game_txt">Accelerometer Game</string>
    <string name="comp_game_txt">Compass Game</string>
    <string name="prox_game_txt">Proximity Game</string>
    <string name="tot_score">Punteggio Totale</string>
    <string name="title_activity_classifica">Classifica</string>
    <string name="title_activity_chose">Scelta Gioco</string>
    <string name="chose_training_message">Scegli un gioco su cui allenarti</string>
    <string name="title_activity_accelerometer_training">Accelerometer Training</string>
    <string name="ok_msg">Ok</string>
    <string name="piu_forte_msg">Piu forte</string>
    <string name="title_activity_prroximity_training">PrroximityTraining</string>
    <string name="piu_vicino_msg">Piu vicino</string>
    <string name="title_activity_compass_training">Compass Training</string>
    <string name="compass_game_req">Orienta il telefono verso Nord</string>
    <string name="flush_class_mex">Cancella Classifica</string>
    <string name="trackingID">UA-61732642-1</string>

</resources>
