<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.giocodestrezza.main.MainActivity">

    <TextView
        android:id="@+id/main_chose_tv"
        android:text="@string/text_view_selction"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/ripple_material_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
       />
    
    <Button
        android:id="@+id/start_btn"
        android:text="@string/text_btn_gioco"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_above="@+id/training_btn"
        android:layout_alignLeft="@+id/training_btn"
        android:layout_alignStart="@+id/training_btn"
        android:onClick="clickBtnStart" />
    
    <Button
        android:id="@+id/training_btn"
        android:text="@string/text_btn_training"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/classif_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:onClick="clickBtnTraining"/>

    <Button
        android:id="@+id/classif_btn"
        android:text="@string/text_btn_classifield"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp"
        android:onClick="clickBtnClassifica"/>

</RelativeLayout>
