<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.giocodestrezza.gioco.activity.RecapActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/name_tv"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_game_txt"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/accScore_tv"
        android:layout_below="@+id/name_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp_game_txt"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/compGame_tv"
        android:layout_below="@+id/accScore_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prox_game_txt"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/prox_game_tv"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/compGame_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tot_score"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/tot_score_tv"
        android:layout_below="@+id/prox_game_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_dialog_btn_txt"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/continue_btn"
        android:layout_below="@+id/tot_score_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="clickBtn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/name_field_recap"
        android:layout_alignTop="@+id/name_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/acc_score_recap"
        android:layout_alignTop="@+id/accScore_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/comp_score_recap"
        android:layout_alignTop="@+id/compGame_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/prox_score_recap"
        android:layout_alignTop="@+id/prox_game_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/tot_score_recap"
        android:layout_alignTop="@+id/tot_score_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
